layers: added meta-qt5 layer.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "layers/meta-glvnd"]
 	path = layers/meta-glvnd
 	url = https://github.com/dev-0x7C6/meta-glvnd.git
+[submodule "layers/meta-qt5"]
+	path = layers/meta-qt5
+	url = https://code.qt.io/yocto/meta-qt5.git
