--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,12 @@
 [submodule "layers/meta-retro"]
 	path = layers/meta-retro
 	url = https://github.com/dev-0x7C6/meta-retro.git
-[submodule "layers/meta-glvnd"]
-	path = layers/meta-glvnd
-	url = https://github.com/dev-0x7C6/meta-glvnd.git
 [submodule "layers/meta-qt5"]
 	path = layers/meta-qt5
 	url = https://code.qt.io/yocto/meta-qt5.git
 [submodule "layers/meta-kodi"]
 	path = layers/meta-kodi
 	url = https://github.com/dev-0x7C6/meta-kodi.git
+[submodule "layers/meta-mesa"]
+	path = layers/meta-mesa
+	url = https://github.com/dev-0x7C6/meta-mesa.git
