layers: added meta-dev1990 with led-frame.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "layers/meta-mesa"]
 	path = layers/meta-mesa
 	url = https://github.com/dev-0x7C6/meta-mesa.git
+[submodule "layers/meta-dev1990"]
+	path = layers/meta-dev1990
+	url = https://github.com/dev-0x7C6/meta-dev1990.git
