--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,36 @@
 [submodule "poky"]
 	path = poky
 	url = git://git.yoctoproject.org/poky.git
+	branch = zeus
 [submodule "layers/meta-openembedded"]
 	path = layers/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
+	branch = zeus
 [submodule "layers/meta-intel"]
 	path = layers/meta-intel
 	url = git://git.yoctoproject.org/meta-intel
+	branch = zeus
 [submodule "layers/meta-raspberrypi"]
 	path = layers/meta-raspberrypi
 	url = git://git.yoctoproject.org/meta-raspberrypi
+	branch = zeus
 [submodule "layers/meta-retro"]
 	path = layers/meta-retro
 	url = https://github.com/dev-0x7C6/meta-retro.git
+	branch = zeus
 [submodule "layers/meta-qt5"]
 	path = layers/meta-qt5
 	url = https://code.qt.io/yocto/meta-qt5.git
+	branch = 5.12
 [submodule "layers/meta-kodi"]
 	path = layers/meta-kodi
 	url = https://github.com/dev-0x7C6/meta-kodi.git
+	branch = zeus
 [submodule "layers/meta-mesa"]
 	path = layers/meta-mesa
 	url = https://github.com/dev-0x7C6/meta-mesa.git
+	branch = zeus
 [submodule "layers/meta-dev1990"]
 	path = layers/meta-dev1990
 	url = https://github.com/dev-0x7C6/meta-dev1990.git
+	branch = zeus
