layers: added meta-sunxi with initial support.

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 	path = layers/meta-rauc-community
 	url = https://github.com/dev-0x7C6/meta-rauc-community.git
 	branch = master
+[submodule "layers/meta-sunxi"]
+	path = layers/meta-sunxi
+	url = https://github.com/linux-sunxi/meta-sunxi.git
