--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,7 @@
 	path = layers/meta-sunxi
 	url = https://github.com/dev-0x7C6/meta-sunxi.git
 	branch = master
+[submodule "layers/meta-meson"]
+	path = layers/meta-meson
+	url = https://github.com/dev-0x7C6/meta-meson.git
+	branch = master
