--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,6 @@
 	path = layers/meta-meson
 	url = https://github.com/dev-0x7C6/meta-meson.git
 	branch = master
+[submodule "layers/meta-raspberrypi-extras"]
+	path = layers/meta-raspberrypi-extras
+	url = https://github.com/dev-0x7C6/meta-raspberrypi-extras
