conf: updated configuration and layers.

--- a/.gitmodules
+++ b/.gitmodules
@@ -44,8 +44,8 @@
 	branch = master
 [submodule "layers/meta-rauc-community"]
 	path = layers/meta-rauc-community
-	url = https://github.com/dev-0x7C6/meta-rauc-community.git
-	branch = autogrow-fs
+	url = https://github.com/leon-anavi/meta-rauc-community.git
+	branch = master
 [submodule "layers/meta-sunxi"]
 	path = layers/meta-sunxi
 	url = https://github.com/dev-0x7C6/meta-sunxi.git
