--- a/.gitmodules
+++ b/.gitmodules
@@ -17,7 +17,7 @@
 [submodule "layers/meta-retro"]
 	path = layers/meta-retro
 	url = https://github.com/dev-0x7C6/meta-retro.git
-	branch = master
+	branch = gatesgarth
 [submodule "layers/meta-qt5"]
 	path = layers/meta-qt5
 	url = https://code.qt.io/yocto/meta-qt5.git
