--- a/.gitmodules
+++ b/.gitmodules
@@ -48,8 +48,8 @@
 	branch = master
 [submodule "layers/meta-sunxi"]
 	path = layers/meta-sunxi
-	url = https://github.com/dev-0x7C6/meta-sunxi.git
-	branch = master
+	url = https://github.com/linux-sunxi/meta-sunxi.git
+	branch = hardknott
 [submodule "layers/meta-meson"]
 	path = layers/meta-meson
 	url = https://github.com/dev-0x7C6/meta-meson.git
