layers: added meta-wayland layer.
Signed-off-by: Bartłomiej Burdukiewicz <bartlomiej.burdukiewicz@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "layers/meta-rockchip-extras"]
 	path = layers/meta-rockchip-extras
 	url = https://github.com/MarkusVolk/meta-rockchip-extras.git
+[submodule "layers/meta-wayland"]
+	path = layers/meta-wayland
+	url = https://github.com/MarkusVolk/meta-wayland.git
