--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "layers/meta-wayland"]
 	path = layers/meta-wayland
 	url = https://github.com/MarkusVolk/meta-wayland.git
+[submodule "layers/meta-ryzen"]
+	path = layers/meta-ryzen
+	url = https://github.com/dev-0x7C6/meta-ryzen.git
