--- a/.gitmodules
+++ b/.gitmodules
@@ -18,10 +18,6 @@
 	path = layers/meta-retro
 	url = https://github.com/dev-0x7C6/meta-retro.git
 	branch = master
-[submodule "layers/meta-qt5"]
-	path = layers/meta-qt5
-	url = https://code.qt.io/yocto/meta-qt5.git
-	branch = 5.15
 [submodule "layers/meta-kodi"]
 	path = layers/meta-kodi
 	url = https://github.com/koenkooi/meta-kodi.git
@@ -79,3 +75,7 @@
 [submodule "layers/meta-ryzen"]
 	path = layers/meta-ryzen
 	url = https://github.com/dev-0x7C6/meta-ryzen.git
+[submodule "layers/meta-qt5"]
+	path = layers/meta-qt5
+	url = https://github.com/meta-qt5/meta-qt5.git
+	branch = hardknott
