--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,31 @@
 [submodule "poky"]
 	path = poky
 	url = git://git.yoctoproject.org/poky.git
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-openembedded"]
 	path = layers/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-intel"]
 	path = layers/meta-intel
 	url = git://git.yoctoproject.org/meta-intel
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-raspberrypi"]
 	path = layers/meta-raspberrypi
 	url = git://git.yoctoproject.org/meta-raspberrypi
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-retro"]
 	path = layers/meta-retro
 	url = https://github.com/dev-0x7C6/meta-retro.git
 	branch = master
 [submodule "layers/meta-kodi"]
 	path = layers/meta-kodi
-	url = https://github.com/koenkooi/meta-kodi.git
-	branch = honister
-[submodule "layers/meta-mesa"]
-	path = layers/meta-mesa
-	url = https://github.com/dev-0x7C6/meta-mesa.git
-	branch = master
+	url = https://github.com/MarkusVolk/meta-kodi.git
+	branch = kirkstone/matrix
 [submodule "layers/meta-dev1990"]
 	path = layers/meta-dev1990
 	url = https://github.com/dev-0x7C6/meta-dev1990.git
 	branch = master
-[submodule "layers/meta-python2"]
-	path = layers/meta-python2
-	url = https://git.openembedded.org/meta-python2
-	branch = honister
 [submodule "layers/meta-rauc"]
 	path = layers/meta-rauc
 	url = https://github.com/rauc/meta-rauc.git
@@ -45,7 +37,7 @@
 [submodule "layers/meta-sunxi"]
 	path = layers/meta-sunxi
 	url = https://github.com/linux-sunxi/meta-sunxi.git
-	branch = master
+	branch = kirkstone
 [submodule "layers/meta-meson"]
 	path = layers/meta-meson
 	url = https://github.com/dev-0x7C6/meta-meson.git
@@ -53,32 +45,28 @@
 [submodule "layers/meta-raspberrypi-extras"]
 	path = layers/meta-raspberrypi-extras
 	url = https://github.com/dev-0x7C6/meta-raspberrypi-extras
-	branch = master
+	branch = kirkstone
 [submodule "layers/meta-rockchip"]
 	path = layers/meta-rockchip
 	url = git://git.yoctoproject.org/meta-rockchip
-	branch = master
+	branch = kirkstone
 [submodule "layers/meta-arm"]
 	path = layers/meta-arm
 	url = git://git.yoctoproject.org/meta-arm
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-clang"]
 	path = layers/meta-clang
 	url = https://github.com/kraj/meta-clang.git
-	branch = honister
+	branch = kirkstone
 [submodule "layers/meta-rockchip-extras"]
 	path = layers/meta-rockchip-extras
 	url = https://github.com/MarkusVolk/meta-rockchip-extras.git
-	branch = master
+	branch = kirkstone
 [submodule "layers/meta-wayland"]
 	path = layers/meta-wayland
 	url = https://github.com/MarkusVolk/meta-wayland.git
-	branch = honister
-[submodule "layers/meta-ryzen"]
-	path = layers/meta-ryzen
-	url = https://github.com/dev-0x7C6/meta-ryzen.git
-	branch = main
+	branch = kirkstone
 [submodule "layers/meta-qt5"]
 	path = layers/meta-qt5
 	url = https://github.com/meta-qt5/meta-qt5.git
-	branch = honister
+	branch = master
